<resources>
    <string name="app_name">Novopay Microblog</string>
    <string name="user_details">User Details</string>
    <string name="name">Name: </string>
    <string name="id">Id: </string>
    <string name="email">Email: </string>
    <string name="posts">Posts</string>
    <string name="post_detail">Post Details</string>
    <string name="post_title">Post Title: </string>
    <string name="post_user_id">UserId: </string>
    <string name="post_body">Post Body</string>
    <string name="comments">Comments</string>
</resources>
