<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/user_details_top_RL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/user_detail_bg">

        <TextView
            android:id="@+id/tv_main_post_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/user_details"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_main_post_body"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/id"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_user_id"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/email"
            android:textColor="#000"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_details_top_RL"
        android:layout_margin="20dp"
        android:background="@drawable/user_detail_bg">

        <TextView
            android:id="@+id/comment_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/posts"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_post_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_tv"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:scrollbars="vertical" />

        <ProgressBar
            android:id="@+id/post_progress_bar"
            android:background="@drawable/progress_bar_bg"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/comment_tv"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>