<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/comment_details_top_RL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/user_detail_bg"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_main_comment_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/post_detail"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_main_comment_details"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/post_title"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_username"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/id"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_user_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_user_id"
                    android:layout_marginStart="15dp"
                    android:text="@string/post_user_id"
                    android:textColor="#000"
                    android:textSize="16sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_comment_middle_RL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/comment_details_top_RL"
                android:layout_margin="20dp"
                android:background="@drawable/user_detail_bg">

                <TextView
                    android:id="@+id/tv_main_post_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:paddingTop="10dp"
                    android:text="@string/post_body"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_post_details_body"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_main_post_body"
                    android:paddingHorizontal="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:textColor="#000"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_below="@id/user_comment_middle_RL"
                android:layout_margin="20dp"
                android:background="@drawable/user_detail_bg">

                <TextView
                    android:id="@+id/comment_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/comments"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/all_comments_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment_tv"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    android:scrollbars="vertical" />
                <ProgressBar
                    android:id="@+id/comment_progress_bar"
                    android:visibility="gone"
                    android:background="@drawable/progress_bar_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/comment_tv"
                    android:layout_marginTop="10dp"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>